--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">CryptoApp</string>
+    <string name="total">Total</string>
+    <string name="usd">USD</string>
+    <string name="null_transaction">Null transaction</string>
+    <string name="add_transaction">Add transaction</string>
+    <string name="home">Home</string>
+    <string name="settings">Settings</string>
+    <string name="all_time">All time</string>
+    <string name="average_price">Average purchase price</string>
+    <string name="current_price">Current price</string>
+    <string name="replenishment">Replenishment</string>
+    <string name="transaction">Transaction</string>
+    <string name="cansel">Cansel</string>
+    <string name="price_coin">Price coin</string>
+    <string name="add">Add</string>
+    <string name="price">Price</string>
+    <string name="set_price">Set price</string>
+    <string name="currency">Currency</string>
+    <string name="theme">Theme</string>
+    <string name="light">Light</string>
 </resources>
